--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:15.0.0'
     //ADD LIBRARY FACEBOOK
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    //ADD LIBRARY STYLES
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
 apply plugin: 'com.google.gms.google-services'
