--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,12 +64,11 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".View.MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity
             android:name=".View.PrincipalActivity"
             android:label="@string/title_activity_principal"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".View.ListaFragment" />
+        <activity android:name=".View.LocationMapsFragment"></activity>
     </application>
 
 </manifest>
