--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     // ADD MY LIBRARY
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.google.firebase:firebase-database:15.0.0'
+    implementation 'com.google.firebase:firebase-storage:15.0.0'
     implementation 'com.google.firebase:firebase-auth:15.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
     //ADD LIBRARY FACEBOOK
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     //ADD LIBRARY STYLES
