--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'com.github.medyo:fancybuttons:1.8.4'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
 apply plugin: 'com.google.gms.google-services'
