--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity
             android:name=".View.HomeActivity"
             android:theme="@style/AppTheme.CustomTheme" />
-        />
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -75,9 +75,11 @@
         <activity
             android:name=".View.SelecUbicacion"
             android:label="@string/title_activity_selec_ubicacion"
-            android:theme="@style/AppTheme.CustomTheme"
-
-            />
+            android:theme="@style/AppTheme.CustomTheme" />
+        <activity
+            android:name=".View.DetallesFoodActivity"
+            android:label="@string/title_activity_detalles_food"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
