--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,16 +35,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:15.0.0'
     implementation 'com.google.firebase:firebase-auth:15.0.0'
     implementation 'com.firebaseui:firebase-ui-database:0.4.0'
+
     //ADD LIBRARY FACEBOOK
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
     //ADD LIBRARY STYLES
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.6'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
     implementation 'com.github.medyo:fancybuttons:1.8.4'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
 apply plugin: 'com.google.gms.google-services'
