--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
@@ -46,8 +47,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
@@ -81,12 +84,17 @@
         <activity android:name=".View.Bebidas" />
         <activity android:name=".View.Extras" />
         <activity android:name=".View.FragmentLisComidas" />
+        <activity android:name=".View.SegundoFragment" />
         <activity android:name=".View.FragmentLisBebidas" />
         <activity android:name=".View.FragmentLisExtras" />
         <activity android:name=".View.RegistroMenu1" />
         <activity
             android:name=".View.MenuActivity"
             android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".View.Menu2"
+            android:label="@string/title_activity_meu2"
             android:theme="@style/AppTheme" />
     </application>
 
