--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,7 @@
             android:name=".View.Menu2"
             android:label="@string/title_activity_meu2"
             android:theme="@style/AppTheme" />
+        <activity android:name=".View.GestionRestUserActivity"></activity>
     </application>
 
 </manifest>
